--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-hook-form": "^7.39.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.6",
+    "react-spinners-kit": "^1.9.1",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
